<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_comp">

    <Button
        android:id="@+id/btn_off"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/off"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_game"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/btn_reboot"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_ds"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/diskord"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_off"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/btn_reboot"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="43dp"
        android:text="@string/reboot"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/btn_game"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:text="@string/game"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="390dp"
        android:layout_height="115dp"
        android:text="@string/txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/back_to_main"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="263dp"
        android:layout_height="128dp"
        android:layout_marginBottom="28dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_txt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sound_txt"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="17dp"
        android:text="@string/volume"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ds"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>